--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.17</version>
+		</dependency>
+
+
+
 
 
 
