--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ server.port=8081
 track.TrackId=1
 track.TrackName=Bahubali
 track.TrackComments=good
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url =  jdbc:mysql://localhost:3306/musicDB
+spring.datasource.username= root
+spring.datasource.password= Root@123
