--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-server.port=8081
+server.port=8080
 
 track.TrackId=1
-track.TrackName=Bahubali
-track.TrackComments=good
+track.TrackName=Dhoni
+track.TrackComments=Awesome
 
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url =  jdbc:mysql://localhost:3306/musicDB
-spring.datasource.username= root
-spring.datasource.password= Root@123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url =  jdbc:mysql://localhost:3306/musicDB
+#spring.datasource.username= root
+#spring.datasource.password= Root@123
