--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,27 @@
-#spring.h2.enabled.console=true;
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-server.port=8080
-
+##spring.h2.enabled.console=true;
+#
+##spring.h2.console.enabled=true
+##spring.h2.console.path=/h2-console
+#server.port=8080
+#
+##spring.profiles.active = prod
+#
 track.TrackId=1
 track.TrackName=Dhoni
 track.TrackComments=Awesome
+#
+#
+##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.datasource.url =  jdbc:mysql://localhost:3306/musicDB
+##spring.datasource.username= root
+##spring.datasource.password= Root@123
 
+server.port=8081
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url =  jdbc:mysql://localhost:3306/musicDB
-#spring.datasource.username= root
-#spring.datasource.password= Root@123
+#mongodb config
+spring.data.mongodb.database=Mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost/Mongodb
+spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+spring.data.mongodb.repositories.enabled=true
+spring.main.allow-bean-definition-overriding=true
