--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,15 @@
 server.port=8081
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/musicDB
-spring.datasource.username=root
-spring.datasource.password=Root@123
+
+#mongodb config
+spring.data.mongodb.database=Mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost/Mongodb
+spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+spring.data.mongodb.repositories.enabled=true
+spring.main.allow-bean-definition-overriding=true
+
+
+
+
+
+
